--- a/src/assets/themes/koia-theme.scss
+++ b/src/assets/themes/koia-theme.scss
@@ -1,13 +1,13 @@
 @use '@angular/material' as mat;
 @include mat.core();
 
-$koia-primary: mat.define-palette(mat.$indigo-palette, 700, 300, 900);
-$koia-accent: mat.define-palette(mat.$green-palette, 700);
-$koia-warn: mat.define-palette(mat.$red-palette);
+$koia-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 700, 300, 900);
+$koia-accent: mat.m2-define-palette(mat.$m2-green-palette, 700);
+$koia-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
-$koia-theme: mat.define-light-theme(( //
+$koia-theme: mat.m2-define-light-theme(( //
             color: (primary: $koia-primary, accent: $koia-accent, warn: $koia-warn ),
-            typography: mat.define-typography-config(),
+            typography: mat.m2-define-typography-config(),
             density: -1));
 
 @include mat.all-component-themes($koia-theme);
