--- a/src/assets/themes/koia-theme.scss
+++ b/src/assets/themes/koia-theme.scss
@@ -1,5 +1,6 @@
 @use '@angular/material' as mat;
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 $koia-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 700, 300, 900);
 $koia-accent: mat.m2-define-palette(mat.$m2-green-palette, 700);
