Feature #4484: Ability to define steps on y and x axis

--- a/src/app/chart/chart-side-bar/chart-side-bar.component.css
+++ b/src/app/chart/chart-side-bar/chart-side-bar.component.css
@@ -25,16 +25,23 @@ button {
   margin-right: 20px;
 }
 
-.span_row {
+.span_legend {
   display: flex;
   flex-wrap: nowrap;
   flex-flow: row;
   align-items: center;
+  margin-bottom: 1em;
+}
+
+.div_labels {
+  display: flex;
+  align-items: center;
+  gap: 1em;
 }
 
 .div_label_rotation {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
 }
 
 .menu_item_legend_position {
