--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,23 +1,24 @@
 <mat-sidenav-container fullscreen>
 
    <mat-sidenav #sidenav mode="push" class="sidenav" *ngIf="elementContexts">
-      <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="selectedContext" [entries]="entries" [gridColumns]="gridColumns"
-                           [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
-                           (onElementPositionChange)="changeElementPosition($event)">
+      <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="selectedContext" [entries]="entries"
+         [gridColumns]="gridColumns" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
+         (onElementPositionChange)="changeElementPosition($event)">
       </koia-chart-side-bar>
-      <koia-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="selectedContext" [entries]="entries" [gridColumns]="gridColumns"
-                           [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
-                           (onElementPositionChange)="changeElementPosition($event)">
+      <koia-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="selectedContext" [entries]="entries"
+         [gridColumns]="gridColumns" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
+         (onElementPositionChange)="changeElementPosition($event)">
       </koia-graph-side-bar>
-      <koia-summary-table-side-bar *ngIf="isSummaryContext(selectedContext)" [context]="selectedContext" [entries]="entries" [gridColumns]="gridColumns"
-                                   [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
-                                   (onElementPositionChange)="changeElementPosition($event)">
+      <koia-summary-table-side-bar *ngIf="isSummaryContext(selectedContext)" [context]="selectedContext"
+         [entries]="entries" [gridColumns]="gridColumns" [elementCount]="elementContexts.length"
+         [elementPosition]="selectedContextPosition" (onElementPositionChange)="changeElementPosition($event)">
       </koia-summary-table-side-bar>
    </mat-sidenav>
 
    <div class="div_wrapper">
       <div #header class="div_header">
-         <koia-main-toolbar [route]="route" [restoredQuery]="restoredQuery" (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
+         <koia-main-toolbar [route]="route" [restoredQuery]="restoredQuery"
+            (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
          <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
          <div id="view_toolbar">
             <button mat-icon-button [matMenuTriggerFor]="moreMenu">
@@ -40,27 +41,29 @@
 
             <mat-menu #gridColumnsMenu="matMenu">
                <button mat-menu-item *ngFor="let columns of [ 1, 2, 3, 4, 5]" [value]="columns"
-                       [disabled]="columns === gridColumns" (click)="setGridColumns(columns)">{{ columns }}
+                  [disabled]="columns === gridColumns" (click)="setGridColumns(columns)">{{ columns }}
                   Column{{ columns === 1 ? '' : 's' }}</button>
             </mat-menu>
 
             <mat-menu #gridRatioMenu="matMenu">
                <button mat-menu-item *ngFor="let ratio of [ '1:1', '2:3', '3:2']" [value]="ratio"
-                       [disabled]="ratio === gridCellRatio" (click)="setGridCellRatio(ratio)">{{ ratio }}</button>
+                  [disabled]="ratio === gridCellRatio" (click)="setGridCellRatio(ratio)">{{ ratio }}</button>
             </mat-menu>
 
-            <!--
-         <button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
-            [disabled]="elementContexts.length === 0" (click)="printView()">
-            <mat-icon>print</mat-icon>
-         </button>
-         -->
-            <button mat-icon-button matTooltip="Save current view" [disabled]="!elementContexts || !elementContexts.length" (click)="saveView()">
+            <button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
+               [disabled]="elementContexts.length === 0" (click)="printView()">
+               <mat-icon>print</mat-icon>
+            </button>
+
+            <button mat-icon-button matTooltip="Save current view"
+               [disabled]="!elementContexts || !elementContexts.length" (click)="saveView()">
                <mat-icon>save_alt</mat-icon>
             </button>
 
-            <button class="but_more" mat-icon-button matTooltip="Restore saved view" [disabled]="!views.length" [matMenuTriggerFor]="restoreViewMenu">
-               <mat-icon [matBadge]="views.length" [matBadgeHidden]="!views.length" matBadgeSize="small" matBadgeColor="accent">
+            <button class="but_more" mat-icon-button matTooltip="Restore saved view" [disabled]="!views.length"
+               [matMenuTriggerFor]="restoreViewMenu">
+               <mat-icon [matBadge]="views.length" [matBadgeHidden]="!views.length" matBadgeSize="small"
+                  matBadgeColor="accent">
                   open_in_browser
                </mat-icon>
             </button>
@@ -84,37 +87,42 @@
          </div>
       </div>
 
-      <div #content class="div_content">
-         <mat-grid-list #content id="grid_list" [cols]="gridColumns" [rowHeight]="gridCellRatio" gutterSize="10">
-            <mat-grid-tile class="mat-elevation-z8" *ngFor="let context of elementContexts" [colspan]="context.gridColumnSpan" [rowspan]="context.gridRowSpan">
+      <div #content class="div_content printable" style="padding: 5px;">
+         <mat-grid-list #content [cols]="gridColumns" [rowHeight]="gridCellRatio" gutterSize="10">
+            <mat-grid-tile class="mat-elevation-z8" *ngFor="let context of elementContexts"
+               [colspan]="context.gridColumnSpan" [rowspan]="context.gridRowSpan">
                <div #elementContainer class="div_element">
                   <div class="div_element_header">
                      <div style="display: flex">
-                        <button class="but_config" mat-icon-button [matMenuTriggerFor]="moreMenu" *ngIf="!!context.getSupportedExportFormats().length">
+                        <button class="but_config" mat-icon-button [matMenuTriggerFor]="moreMenu"
+                           *ngIf="!!context.getSupportedExportFormats().length">
                            <mat-icon>more_vert</mat-icon>
                         </button>
                         <mat-menu #moreMenu="matMenu">
-                           <button mat-menu-item *ngFor="let exportFormat of context.getSupportedExportFormats()" (click)="saveAs(context, exportFormat)">
+                           <button mat-menu-item *ngFor="let exportFormat of context.getSupportedExportFormats()"
+                              (click)="saveAs(context, exportFormat)">
                               <mat-icon>insert_drive_file</mat-icon>
                               <span>Save As {{ exportFormat }}</span>
                            </button>
                         </mat-menu>
-                        <button id="configButton" class="but_config" mat-icon-button
-                                matTooltip="Configure..." (click)="configure($event, context)">
+                        <button id="configButton" class="but_config" mat-icon-button matTooltip="Configure..."
+                           (click)="configure($event, context)">
                            <mat-icon>settings</mat-icon>
                         </button>
                         <button [ngClass]="isShowResizableMargin(context) ? 'but_config_active' : 'but_config'"
-                                *ngIf="isChartContext(context)" mat-icon-button
-                                [color]="isShowResizableMargin(context) ? 'primary' : null"
-                                matTooltip="Toggle resizable chart margin" (click)="asChartContext(context).toggleShowResizableMargin()">
+                           *ngIf="isChartContext(context)" mat-icon-button
+                           [color]="isShowResizableMargin(context) ? 'primary' : null"
+                           matTooltip="Toggle resizable chart margin"
+                           (click)="asChartContext(context).toggleShowResizableMargin()">
                            <mat-icon>crop_free</mat-icon>
                         </button>
                      </div>
                      <div class="div_title">
-                        <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()" [textareaMaxRows]="2"
-                                  (keyup)="context.title = $event.target.value"></textarea>
+                        <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
+                           [textareaMaxRows]="2" (keyup)="context.title = $event.target.value"></textarea>
                      </div>
-                     <button class="but_warning" mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning" color="warn">
+                     <button class="but_warning" mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning"
+                        color="warn">
                         <mat-icon>error</mat-icon>
                      </button>
                      <button class="but_close" mat-icon-button matTooltip="Delete" (click)="removeElement(context)">
@@ -126,11 +134,13 @@
                      </koia-summary-table>
                   </div>
                   <div *ngIf="isChartContext(context)" class="div_chart">
-                     <koia-chart [context]="context" [parentConstraintSize]="true" (onRemove)="removeElement($event)" (onWarning)="notifyWarning($event)">
+                     <koia-chart [gridView]="true" [context]="context" (onRemove)="removeElement($event)"
+                        (onWarning)="notifyWarning($event)">
                      </koia-chart>
                   </div>
                   <div *ngIf="isGraphContext(context)" class="div_chart">
-                     <koia-graph [context]="context" [parentConstraintSize]="true" (onRemove)="removeElement($event)" (onWarning)="notifyWarning($event)">
+                     <koia-graph [gridView]="true" [context]="context" (onRemove)="removeElement($event)"
+                        (onWarning)="notifyWarning($event)">
                      </koia-graph>
                   </div>
                </div>
