--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -68,11 +68,12 @@
       </div>
 
       <div class="div_content">
-         <div #content class="div_flex_content printable">
+         <div #content class="div_flex_content printable" cdkDropList cdkDropListOrientation="mixed"
+            (cdkDropListDropped)="drop($event)">
             <div #elementContainer class="div_element mat-elevation-z8" *ngFor="let context of elementContexts"
                mwlResizable [enableGhostResize]="true" [resizeEdges]="resizableEdgesOf(context)"
                [resizeSnapGrid]="{right: 20, bottom: 20}" [validateResize]="validateElementResize"
-               (resizeStart)="onResizeStart($event)" (resizeEnd)="onResizeEnd(context, $event)">
+               (resizeStart)="onResizeStart($event)" (resizeEnd)="onResizeEnd(context, $event)" cdkDrag>
                <div #elementHeader class="div_element_header">
                   <div style="display: flex">
                      <button class="but_config" mat-icon-button [matMenuTriggerFor]="moreMenu"
@@ -105,6 +106,9 @@
                   <button mat-icon-button class="but_warning" *ngIf="context.warning" [matTooltip]="context.warning"
                      color="warn">
                      <mat-icon>error</mat-icon>
+                  </button>
+                  <button class="but_move" mat-icon-button matTooltip="Move" cdkDragHandle>
+                     <mat-icon svgIcon="move"></mat-icon>
                   </button>
                   <button class="but_close" mat-icon-button matTooltip="Delete" (click)="removeElement(context)">
                      <mat-icon>delete_forever</mat-icon>
