--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -65,12 +65,31 @@ span {
   /* otherwise, it doesn't stay behind sticky header when scrolling */
 }
 
+.but_move {
+  z-index: 1;
+  /* otherwise, it doesn't stay behind sticky header when scrolling */
+  opacity: 0.5;
+  cursor: move;
+}
+
 .but_close {
   z-index: 1;
   /* otherwise, it doesn't stay behind sticky header when scrolling */
-  opacity: 0.8;
+  opacity: 0.5;
 }
 
 button:hover {
   opacity: 1;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
